Manually edit the homepage/last post for posterity

--- a/index.php.html
+++ b/index.php.html
@@ -167,14 +167,14 @@
 						<p>Meet your neighbors.  Discuss what's going on.</p>
 					</td>
 					<td class="stats windowbg">
-						<p>52302 Posts <br />
+						<p>52303 Posts <br />
 						4900 Topics
 						</p>
 					</td>
 					<td class="lastpost">
-						<p><strong>Last post</strong>  by <a href="index.php@action=profile%3Bu=4917.html">ljr</a><br />
+						<p><strong>Last post</strong>  by <a href="index.php@action=profile%3Bu=51168.html">lalochezia</a><br />
 						in <a href="index.php@topic=648.msg105093.html#new" title="Re: The Last Word!">Re: The Last Word!</a><br />
-						on <strong>Yesterday</strong> at 11:23:26 PM
+						on December 31, 2021, 12:16:35 PM
 						</p>
 					</td>
 				</tr>
@@ -426,8 +426,8 @@
 				</h4>
 			</div>
 			<p>
-				96948 Posts in 15025 Topics by 4313 Members. Latest Member: <strong> <a href="index.php@action=profile%3Bu=69755.html">marcua</a></strong><br />
-				Latest Post: <strong>&quot;<a href="index.php@topic=648.msg105093.html#new" title="Re: The Last Word!">Re: The Last Word!</a>&quot;</strong>  ( <strong>Yesterday</strong> at 11:23:26 PM )<br />
+				96949 Posts in 15025 Topics by 4313 Members. Latest Member: <strong> <a href="index.php@action=profile%3Bu=69755.html">marcua</a></strong><br />
+				Latest Post: <strong>&quot;<a href="index.php@topic=648.msg105093.html#new" title="Re: The Last Word!">Re: The Last Word!</a>&quot;</strong>  ( December 31, 2021, 12:16:35 PM )<br />
 				<a href="index.php@action=recent.html">View the most recent posts on the forum.</a>
 			</p>
 			<div class="title_barIC">
