Fix another link

--- a/index.php@board=2.0.html
+++ b/index.php@board=2.0.html
@@ -202,9 +202,9 @@
 					</td>
 					<td class="subject windowbg2">
 						<div >
-							<span id="msg_3866"><a href="https://www.jacksonheightslife.com/community/index.php?topic=648.0">The Last Word!</a></span>
+							<span id="msg_3866"><a href="index.php@topic=648.msg105093.html">The Last Word!</a></span>
 							<p>Started by <a href="index.php@action=profile%3Bu=157.html" title="View the profile of buddy">buddy</a>
-								<small id="pages3866">&#171; <a class="navPages" href="https://www.jacksonheightslife.com/community/index.php?topic=648.0">1</a> <a class="navPages" href="index.php@topic=648.15.html">2</a> <a class="navPages" href="index.php@topic=648.30.html">3</a> <span style="font-weight: bold;" onclick="expandPages(this, 'https://www.jacksonheightslife.com/community/index.php?topic=648.%1$d', 45, 1155, 15);" onmouseover="this.style.cursor='pointer';"> ... </span><a class="navPages" href="index.php@topic=648.1155.html">78</a>  &#187;</small>
+								<small id="pages3866">&#171; <a class="navPages" href="index.php@topic=648.msg105093.html">1</a> <a class="navPages" href="index.php@topic=648.15.html">2</a> <a class="navPages" href="index.php@topic=648.30.html">3</a> <span style="font-weight: bold;" onclick="expandPages(this, 'https://www.jacksonheightslife.com/community/index.php?topic=648.%1$d', 45, 1155, 15);" onmouseover="this.style.cursor='pointer';"> ... </span><a class="navPages" href="index.php@topic=648.1155.html">78</a>  &#187;</small>
 							</p>
 						</div>
 					</td>
